fix: reduce code overflow scrollbar size

--- a/assets/scss/_basic.scss
+++ b/assets/scss/_basic.scss
@@ -99,25 +99,26 @@ blockquote {
 }
 
 table {
+    display: block;
     border-collapse: separate;
     border-spacing: 0;
     margin: 3rem auto;
     overflow-x: auto;
-}
 
-th {
-    border-bottom: 4px solid var(--surface0);
-}
+    th {
+        border-bottom: 4px solid var(--surface0);
+    }
 
-td {
-    border-bottom: 2px solid var(--surface0);
-}
+    td {
+        border-bottom: 2px solid var(--surface0);
+    }
 
-th,
-td {
-    text-align: left;
-    padding: 0.75rem 1.5rem;
-    hyphens: auto;
+    th,
+    td {
+        text-align: left;
+        padding: 0.75rem 1.5rem;
+        hyphens: auto;
+    }
 }
 
 :not(pre)>code {
@@ -204,17 +205,18 @@ hr {
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 16px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-track {
     background: transparent;
-    border-radius: 6px;
+    border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
     background: var(--overlay0);
-    border-radius: 6px;
+    border-radius: 8px;
 
 
     &:hover {
